--- a/Modules/Setup.bootstrap.in
+++ b/Modules/Setup.bootstrap.in
@@ -13,6 +13,7 @@ _signal signalmodule.c
 _tracemalloc _tracemalloc.c
 
 # modules used by importlib, deepfreeze, freeze, runpy, and sysconfig
+_behaviors _behaviorsmodule.c
 _codecs _codecsmodule.c
 _collections _collectionsmodule.c
 errno errnomodule.c
